--- a/resume.html
+++ b/resume.html
@@ -61,12 +61,12 @@
             <div class="row">
                 <div class="col-12" id="resumeDiv">
                     <p>Click the link below to download my resume.</p>
-                    <a href="Assets/Misc/Olson_Grant_Resume.pdf" target="_blank">Download Resume</a>
+                    <a href="Assets/Misc/Grant_Olson_Alin_Resume.pdf" target="_blank">Download Resume</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12" id="resumeDiv">
-                    <img src="Assets/Pics/Misc/Resume.png" alt="Grant's Resume" class="img-fluid" id="resumeImage">
+                    <img src="Assets/Pics/Misc/Resume_4-5-25.png" alt="Grant's Resume" class="img-fluid" id="resumeImage">
                 </div>
             </div>
     </div>
