--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid" id="projectButton">
+            <div class="row">
+                <div class="col-12">
+                    <a href="projects.html" class="btn btn-primary" id="projectButton">View My Work</a>
+                </div>
+            </div>
     </div>
 </body>
 
@@ -80,8 +86,8 @@
     <div id="footer">
         <h5>Contact me or check out my work</h5>
         <div id="socials">
-            <a href="mailto:g.rantolson02@gmail.com">
-            <img src="Assets/Pics/Icons/gmail.svg" alt="Gmail">
+            <a href="mailto:alinthedreamer@gmail.com">
+                <img src="Assets/Pics/Icons/gmail.svg" alt="Gmail">
             </a>
             <a href="https://www.linkedin.com/in/grant-olson-ba65b3261/" target="_blank" rel="noopener noreferrer">
             <img src="Assets/Pics/Icons/linkedin.svg" alt="LinkedIn">
