--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
     <div id="contentDiv">
         <div class="container-fluid">
             <div class="row">
-                <!-- Tx2Day -->
+                <!-- The Talking Stick -->
                 <div class="col-md-4">
                     <!-- Project Card -->
                     <div class="project-card" data-project="tx2day">
@@ -185,34 +185,34 @@
                         </div>
                     </div>  
                 </div>
-                <!-- Tx2Day -->
+                <!-- Sappy -->
                 <div class="col-md-4">
                     <!-- Project Card -->
-                    <div class="project-card" data-project="tx2day">
-                        <img src="Assets/Pics/Tx2Day/Tx2Day Logo with BG.png" alt="Tx2Day Thumbnail">
+                    <div class="project-card" data-project="sappy">
+                        <img src="Assets/Pics/Sappy/Sappy_Logo.png" alt="Sappy Thumbnail">
                         <div class="project-info">
-                            <h3>Tx2Day</h3>
-                            <p class="date">Summer 2023 - Present</p>
-                            <p class="desc">Occupational therapy paperwork automation webapp</p>
+                            <h3>Sappy</h3>
+                            <p class="date">September 6, 2024 - November 7, 2024</p>
+                            <p class="desc">3D Platformer</p>
                         </div>
                     </div>
                     
                     <!-- Modal Content -->
-                    <div class="project-modal" id="tx2day-modal">
+                    <div class="project-modal" id="sappy-modal">
                         <div class="modal-content">
                             <span class="close">&times;</span>
-                            <div class="container-fluid" id="Tx2Day">
-                                <!-- intro -->
+                            <div class="container-fluid" id="sappy">
+                                <!-- Intro -->
                                 <div class="row">
                                     <div class="col-12">
-                                        <h2><a href="Tx2Day.com" target="_blank"></a>Tx2Day.com</h2>
+                                        <h2>Sappy, a sapling story</h2>
                                     </div>
                                 </div>
                                 <hr>
                                 <!-- logo -->
                                 <div class="row">
                                     <div class="col-12">
-                                        <img src="Assets\Pics\Tx2Day\Tx2Day Logo with BG.png" class="curvedImg img-fluid" alt="Tx2Day Logo">
+                                        <img src="Assets\Pics\Sappy\Sappy_Logo.png" class="curvedImg img-fluid" alt="Sappy Logo">
                                     </div>
                                 </div>
                                 <!-- text -->
@@ -223,31 +223,35 @@
                                             data-bs-toggle="collapse" data-bs-target="#collapseExample" 
                                             aria-expanded="false" aria-controls="collapseExample"
                                             id="myCollapseButton">
-                                            Click here to learn about Tx2Day
+                                            Click here to learn about Sappy
                                             </button>
                                         </p>
                                     </div>
                                     <div class="collapse" id="collapseExample">
                                         <div class="card card-body" id="collapseText">
                                             <h3>Overview:</h3>
-                                            <p>Tx2Day is a web application I've been working on aimed at simplifying therapy documentation processes for practitioners.
-                                            In particular, the application is designed to help Occupational Therapists manage their daily reports, client information, and scheduling needs.
+                                            <p>Sappy is a 3D platformer that a small team and I made for one of my club's (Game Development and Design Club at Boise State) game jam's.
+                                            The game is about a seedling that has to grow through different "sunspots" in order to get back to his family after being blown away.
                                             </p>
                                             <h3>Goal:</h3>
-                                            <p>The primary goal of the Tx2Day project is to create a user-friendly platform that addresses the 
-                                            complexities of therapy documentation by building a modular daily schedule and report interface.</p>
-                                            <h3>Insights & Skills:</h3>
-                                            <h5>UI/UX:</h5>
-                                            <p>Throughout the project, I had the opportunity to leverage and showcase the user experience design skills 
-                                            I acquired during my studies in the <a href="https://www.boisestate.edu/gimm/about/">Boise State University GIMM Degree</a>.
-                                            By utilizing paper prototypes in conjunction with regular client meetings, I gained real world experience designing and iterating on a series of prototypes to determine what experience would best fit the interface.</p>
-                                            <h5>Technical:</h5>
-                                            <p>Outside of the sphere of designed interactions, this project has also introduced me to a series of common technical issues and solutions in the web development world.
-                                            In order to ensure the confidentiality of client data, I have learned how to implement data encryption within SQL queries, build a secure login system, and implement a series of data persistence solutions to ensure that client data is not lost between sessions.
+                                            <p>For this project, the game jam's theme was Growth, so our goal for the project was to find an interesting way to build that into the theme of the game.
+                                            </p>
+                                            <h3>Contributions</h3>
+                                            <h5>Leadership</h5>
+                                            <p>For this project, I was the project manager, facilitated meetings, structured check-ins, and ensured that progress continued throughout the timeframe.</p>
+                                            <h5>Programming</h5>
+                                            <p>I built out the animation controller for sappy, figured out how the insect movement would be implemented, set up dynamic audio rules, created the pause menu mechanic, and worked on other general debugging.</p>
+                                            <h5>Audio</h5>
+                                            <p>I created all of the music for the game in Ableton Live 11.</p>
+                                            <h5>Level Design</h5>
+                                            <p>In the early stages of development, Jordan Alba Reed and I generated terrain for the open world using heightmap data from around the Boise area and Terrain Export tools.
+                                            This grayboxing work was then sent to the 3D artist on our team, Jaden Rogers, who took what we made and stylized it into the final terrain model that we used in the game.
                                             </p>
                                             <h3>What I enjoyed about the project:</h3>
-                                            <p>What makes working on the Tx2Day project particularly enjoyable for me thus far is that I have been given an opportunity to learn every step it takes to make a solid, structured web application. 
-                                            This project has essentially been my first forray into Web Development, and from setting up a hosting service to building a comprehensive registration system, I've become a much better programmer while working on this project.</p>
+                                            <p>I think the most enjoyable aspect of working on the Sappy project for me was that it wasn't bound to the same rules as my school assignments.
+                                            During the time where I was working on this project, I was also a 3D artist for 4 other projects, and having the opportunity to work on something outside of Blender was a nice change of pace.
+                                            I also had a lot of fun working with the team I was on, and I think that the final product is a great representation of what we were able to accomplish in such a short time frame.</p>
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -256,17 +260,6 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <h3>Gallery</h3>
-                                    </div>
-                                </div>
-                                <!-- first row of pictures -->
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <h5>Welcome Page</h5>
-                                        <img class="curvedImg img-fluid" src="Assets\Pics\Tx2Day\Tx2Day_Welcome.png" alt="The Tx2Day Welcome Page">
-                                    </div>
-                                    <div class="col-md-6">
-                                        <h5>Sign In</h5>
-                                        <img class="curvedImg img-fluid" src="Assets\Pics\Tx2Day\Tx2Day_Sign_In.png" alt="The Tx2Day Sign-in Page">
                                     </div>
                                 </div>
                                 <!-- carousel -->
