--- a/projects.html
+++ b/projects.html
@@ -304,6 +304,127 @@
                         </div>
                     </div>  
                 </div>
+                <!-- The Universal Almanac     -->
+                <div class="col-md-4">
+                    <!-- Project Card -->
+                    <div class="project-card" data-project="sappy">
+                        <img src="Assets/Pics/Sappy/Sappy_Logo.png" alt="Sappy Thumbnail">
+                        <div class="project-info">
+                            <h3>Sappy</h3>
+                            <p class="date">September 6, 2024 - November 7, 2024</p>
+                            <p class="desc">3D Platformer</p>
+                        </div>
+                    </div>
+                    
+                    <!-- Modal Content -->
+                    <div class="project-modal" id="sappy-modal">
+                        <div class="modal-content">
+                            <span class="close">&times;</span>
+                            <div class="container-fluid" id="sappy">
+                                <!-- Intro -->
+                                <div class="row">
+                                    <div class="col-12">
+                                        <h2>Sappy, a sapling story</h2>
+                                    </div>
+                                </div>
+                                <hr>
+                                <!-- logo -->
+                                <div class="row">
+                                    <div class="col-12">
+                                        <img src="Assets\Pics\Sappy\Sappy_Logo.png" class="curvedImg img-fluid" alt="Sappy Logo">
+                                    </div>
+                                </div>
+                                <!-- text -->
+                                <div class="row">
+                                    <div class="col-12">
+                                        <p>
+                                            <button class="btn btn-primary" type="button" 
+                                            data-bs-toggle="collapse" data-bs-target="#collapseExample" 
+                                            aria-expanded="false" aria-controls="collapseExample"
+                                            id="myCollapseButton">
+                                            Click here to learn about Sappy
+                                            </button>
+                                        </p>
+                                    </div>
+                                    <div class="collapse" id="collapseExample">
+                                        <div class="card card-body" id="collapseText">
+                                            <h3>Overview:</h3>
+                                            <p>Sappy is a 3D platformer that a small team and I made for one of my club's (Game Development and Design Club at Boise State) game jam's.
+                                            The game is about a seedling that has to grow through different "sunspots" in order to get back to his family after being blown away.
+                                            </p>
+                                            <h3>Goal:</h3>
+                                            <p>For this project, the game jam's theme was Growth, so our goal for the project was to find an interesting way to build that into the theme of the game.
+                                            </p>
+                                            <h3>Contributions</h3>
+                                            <h5>Leadership</h5>
+                                            <p>For this project, I was the project manager, facilitated meetings, structured check-ins, and ensured that progress continued throughout the timeframe.</p>
+                                            <h5>Programming</h5>
+                                            <p>I built out the animation controller for sappy, figured out how the insect movement would be implemented, set up dynamic audio rules, created the pause menu mechanic, and worked on other general debugging.</p>
+                                            <h5>Audio</h5>
+                                            <p>I created all of the music for the game in Ableton Live 11.</p>
+                                            <h5>Level Design</h5>
+                                            <p>In the early stages of development, Jordan Alba Reed and I generated terrain for the open world using heightmap data from around the Boise area and Terrain Export tools.
+                                            This grayboxing work was then sent to the 3D artist on our team, Jaden Rogers, who took what we made and stylized it into the final terrain model that we used in the game.
+                                            </p>
+                                            <h3>What I enjoyed about the project:</h3>
+                                            <p>I think the most enjoyable aspect of working on the Sappy project for me was that it wasn't bound to the same rules as my school assignments.
+                                            During the time where I was working on this project, I was also a 3D artist for 4 other projects, and having the opportunity to work on something outside of Blender was a nice change of pace.
+                                            I also had a lot of fun working with the team I was on, and I think that the final product is a great representation of what we were able to accomplish in such a short time frame.</p>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr>
+                                <!-- section title Gallery -->
+                                <div class="row">
+                                    <div class="col-12">
+                                        <h3>Gallery</h3>
+                                    </div>
+                                </div>
+                                <!-- carousel -->
+                                <div class="row">
+                                    <div class="col-12">
+                                        <!-- autoscrolling image gallery of screenshots from Bootstrap-->
+                                        <!-- a second interval is 1000 in the data-bs-interval variable -->
+                                        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                                            <div class="carousel-inner">
+                                                <div class="carousel-item active" data-bs-interval="5000">
+                                                    <img src="Assets\Pics\Tx2Day\Tx2Day_Client_Select.png" class="d-block w-100"
+                                                        alt="Client Page">
+                                                </div>
+                                                <div class="carousel-item" data-bs-interval="5000">
+                                                    <img src="Assets\Pics\Tx2Day\Tx2Day_Daily_Report.png" class="d-block w-100"
+                                                        alt="Daily Report" loading="lazy">
+                                                </div>
+                                                <div class="carousel-item" data-bs-interval="5000">
+                                                    <img src="Assets\Pics\Tx2Day\Tx2Day_Location_Schedule.png" class="d-block w-100"
+                                                        alt="Location Schedule" loading="lazy">
+                                                </div>
+                                                <div class="carousel-item" data-bs-interval="5000">
+                                                    <img src="Assets\Pics\Tx2Day\Tx2Day_Visit.png" class="d-block w-100"
+                                                        alt="Visit Page" loading="lazy">
+                                                </div>
+                                            </div>
+                                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                                                data-bs-slide="prev">
+                                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Previous</span>
+                                            </button>
+                                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                                                data-bs-slide="next">
+                                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Next</span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+            <div class="row">
                 <!-- Tx2Day -->
                 <div class="col-md-4">
                     <!-- Project Card -->
@@ -429,9 +550,7 @@
                             </div>
                         </div>
                     </div>  
-                </div>    
-            </div>
-            <div class="row">
+                </div>
                 <!-- Entangled -->
                 <div class="col-md-4">
                     <!-- Project Card -->
@@ -1005,6 +1124,8 @@
                         </div>
                     </div>  
                 </div>
+            </div>
+            <div class="row">
                 <!-- The Cave -->
                 <div class="col-md-4">
                     <!-- Project Card -->
@@ -1213,6 +1334,18 @@
                             </div>
                         </div>  
                     </div>
+                </div>
+                <!-- Empty -->
+                <div class="col-md-4">
+                    <!-- Project Card -->
+                    <div class="project-card" data-project="emptyCard">
+                    </div> 
+                </div>
+                <!-- Empty -->
+                <div class="col-md-4">
+                    <!-- Project Card -->
+                    <div class="project-card" data-project="emptyCard">
+                    </div> 
                 </div>
             </div>
         </div>
