talking stick project changes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href="css/base.css" rel="stylesheet">
     <link href="css/footer.css" rel="stylesheet">
     <link href="css/home.css" rel="stylesheet">
+    <link href="css/projects.css" rel="stylesheet">
 
     <title>Grant's Portfolio</title>
 </head>
@@ -79,7 +80,20 @@
                     <a href="projects.html" class="btn btn-primary" id="projectButton">View My Work</a>
                 </div>
             </div>
+        </div>      
     </div>
+    <section class="vignette-spotlight" id="vignetteSpotlight">
+        <div class="vignette-mask" id="vignetteMask"></div>
+        <div class="project-spotlight" id="projectSpotlight">
+            <h2 class="spotlight-title">Project Spotlight</h2>
+            <div class="spotlight-projects" id="spotlightProjects">
+                <div class="row">
+                    
+                    <div class="col-md-4"></div>
+                </div>
+            </div>
+        </div>
+    </section>      
 </body>
 
 <footer>
@@ -109,6 +123,7 @@
 </footer>  
 
 <!-- Scripts -->
-<script src="Assets/Js/Animations.js"></script>
+<script src="Assets/Js/animations.js"></script>
+<script src="Assets/Js/projects.js"></script>
 
 </html>
