--- a/projects.html
+++ b/projects.html
@@ -62,31 +62,31 @@
                 <!-- The Talking Stick -->
                 <div class="col-md-4">
                     <!-- Project Card -->
-                    <div class="project-card" data-project="tx2day">
-                        <img src="Assets/Pics/Tx2Day/Tx2Day Logo with BG.png" alt="Tx2Day Thumbnail">
+                    <div class="project-card" data-project="talkingStick">
+                        <img src="Assets/Pics/TalkingStick/TheTalkingStickLogo.png" alt="Tx2Day Thumbnail">
                         <div class="project-info">
-                            <h3>Tx2Day</h3>
-                            <p class="date">Summer 2023 - Present</p>
-                            <p class="desc">Occupational therapy paperwork automation webapp</p>
+                            <h3>The Talking Stick</h3>
+                            <p class="date">Fall 2024 - Present</p>
+                            <p class="desc">First Person Multiplayer Horror/Puzzler Game</p>
                         </div>
                     </div>
                     
                     <!-- Modal Content -->
-                    <div class="project-modal" id="tx2day-modal">
+                    <div class="project-modal" id="talkingStick-modal">
                         <div class="modal-content">
                             <span class="close">&times;</span>
                             <div class="container-fluid" id="Tx2Day">
                                 <!-- intro -->
                                 <div class="row">
                                     <div class="col-12">
-                                        <h2><a href="Tx2Day.com" target="_blank"></a>Tx2Day.com</h2>
+                                        <h2><a href="Tx2Day.com" target="_blank"></a>The Talking Stick</h2>
                                     </div>
                                 </div>
                                 <hr>
                                 <!-- logo -->
                                 <div class="row">
                                     <div class="col-12">
-                                        <img src="Assets\Pics\Tx2Day\Tx2Day Logo with BG.png" class="curvedImg img-fluid" alt="Tx2Day Logo">
+                                        <img src="Assets/Pics/TalkingStick/TheTalkingStickLogo.png" class="curvedImg img-fluid" alt="The Talking Stick Logo">
                                     </div>
                                 </div>
                                 <!-- text -->
@@ -97,31 +97,33 @@
                                             data-bs-toggle="collapse" data-bs-target="#collapseExample" 
                                             aria-expanded="false" aria-controls="collapseExample"
                                             id="myCollapseButton">
-                                            Click here to learn about Tx2Day
+                                            Click here to learn about The Talking Stick
                                             </button>
                                         </p>
                                     </div>
                                     <div class="collapse" id="collapseExample">
                                         <div class="card card-body" id="collapseText">
                                             <h3>Overview:</h3>
-                                            <p>Tx2Day is a web application I've been working on aimed at simplifying therapy documentation processes for practitioners.
-                                            In particular, the application is designed to help Occupational Therapists manage their daily reports, client information, and scheduling needs.
+                                            <p>The Talking Stick is a first person multiplayer horror/puzzler game that I am currently working on with a small team of developers and artists.
+                                            The game began development in the Fall of 2024 with the goal of creating a game entirely focused on the idea of "forced nonverbal communication".
                                             </p>
                                             <h3>Goal:</h3>
-                                            <p>The primary goal of the Tx2Day project is to create a user-friendly platform that addresses the 
-                                            complexities of therapy documentation by building a modular daily schedule and report interface.</p>
-                                            <h3>Insights & Skills:</h3>
-                                            <h5>UI/UX:</h5>
-                                            <p>Throughout the project, I had the opportunity to leverage and showcase the user experience design skills 
-                                            I acquired during my studies in the <a href="https://www.boisestate.edu/gimm/about/">Boise State University GIMM Degree</a>.
-                                            By utilizing paper prototypes in conjunction with regular client meetings, I gained real world experience designing and iterating on a series of prototypes to determine what experience would best fit the interface.</p>
-                                            <h5>Technical:</h5>
-                                            <p>Outside of the sphere of designed interactions, this project has also introduced me to a series of common technical issues and solutions in the web development world.
-                                            In order to ensure the confidentiality of client data, I have learned how to implement data encryption within SQL queries, build a secure login system, and implement a series of data persistence solutions to ensure that client data is not lost between sessions.
+                                            <p>Our goal for the project is to create an immersive, multiplayer puzzle in the same vein as Destiny 2's raid encounters (aside from a lack of power fantasy through combat), with the added caviat that only one player can speak at a time.
+                                            To support this goal, we are creating a series of mechanics with items that players will have to use in order to communicate information only they can perceive.
                                             </p>
-                                            <h3>What I enjoyed about the project:</h3>
-                                            <p>What makes working on the Tx2Day project particularly enjoyable for me thus far is that I have been given an opportunity to learn every step it takes to make a solid, structured web application. 
-                                            This project has essentially been my first forray into Web Development, and from setting up a hosting service to building a comprehensive registration system, I've become a much better programmer while working on this project.</p>
+                                            <h3>Insights & Skills:</h3>
+                                            <h5>Programming</h5>
+                                            <p>Thus far during this project I have worn many hats, but my main programming contribution has been creating a modular and entirely randomized puzzle system using a series of puzzle icons that I developed.
+                                            These icons take inspiration from glyphic languages from the past and other existing IP's to make something uniquely "Alien" that can still convey meaning to players.</p>
+                                            <h5>Modeling</h5>
+                                            <p>One of the other hats that I have worn during this project is that of a 3D artist.
+                                            I have created a series of models for the game, including the items that players use to communicate, the lobby environment, and the first level's main antagonist plus it's animations.
+                                            </p>
+                                            <h3>What I enjoy about the project:</h3>
+                                            <p>The Talking Stick and the team I am working with to create it have been my favorite project and most "lived in" experience I have had within the GIMM program thus far.
+                                            This project started as a school assignment, but has quickly grown into something much larger than that and at the moment, I feel as though every day I work on it, I am learning something new and valuable.
+                                            I have also been given the opportunity to work with a team of people that I genuinely enjoy working with, and I think that the final product will be a great representation of what we are able to accomplish together.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -132,17 +134,6 @@
                                         <h3>Gallery</h3>
                                     </div>
                                 </div>
-                                <!-- first row of pictures -->
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <h5>Welcome Page</h5>
-                                        <img class="curvedImg img-fluid" src="Assets\Pics\Tx2Day\Tx2Day_Welcome.png" alt="The Tx2Day Welcome Page">
-                                    </div>
-                                    <div class="col-md-6">
-                                        <h5>Sign In</h5>
-                                        <img class="curvedImg img-fluid" src="Assets\Pics\Tx2Day\Tx2Day_Sign_In.png" alt="The Tx2Day Sign-in Page">
-                                    </div>
-                                </div>
                                 <!-- carousel -->
                                 <div class="row">
                                     <div class="col-12">
@@ -151,20 +142,24 @@
                                         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                                             <div class="carousel-inner">
                                                 <div class="carousel-item active" data-bs-interval="5000">
-                                                    <img src="Assets\Pics\Tx2Day\Tx2Day_Client_Select.png" class="d-block w-100"
-                                                        alt="Client Page">
+                                                    <img src="Assets/Pics/TalkingStick/puzzles.gif" class="d-block w-100"
+                                                        alt="Puzzles">
                                                 </div>
                                                 <div class="carousel-item" data-bs-interval="5000">
-                                                    <img src="Assets\Pics\Tx2Day\Tx2Day_Daily_Report.png" class="d-block w-100"
-                                                        alt="Daily Report" loading="lazy">
+                                                    <img src="Assets/Pics/TalkingStick/LevelsLowFrame.gif" class="d-block w-100"
+                                                        alt="levelFlyby" loading="lazy">
                                                 </div>
                                                 <div class="carousel-item" data-bs-interval="5000">
-                                                    <img src="Assets\Pics\Tx2Day\Tx2Day_Location_Schedule.png" class="d-block w-100"
-                                                        alt="Location Schedule" loading="lazy">
+                                                    <img src="Assets/Pics/TalkingStick/levels_1.gif" class="d-block w-100"
+                                                        alt="CollumnRoom" loading="lazy">
                                                 </div>
                                                 <div class="carousel-item" data-bs-interval="5000">
-                                                    <img src="Assets\Pics\Tx2Day\Tx2Day_Visit.png" class="d-block w-100"
-                                                        alt="Visit Page" loading="lazy">
+                                                    <img src="Assets/Pics/TalkingStick/MONSTER_DESIGN.png" class="d-block w-100"
+                                                        alt="ConceptArt" loading="lazy">
+                                                </div>
+                                                <div class="carousel-item" data-bs-interval="5000">
+                                                    <img src="Assets/Pics/TalkingStick/Monster.png" class="d-block w-100"
+                                                        alt="MonsterRender" loading="lazy">
                                                 </div>
                                             </div>
                                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -212,7 +207,7 @@
                                 <!-- logo -->
                                 <div class="row">
                                     <div class="col-12">
-                                        <img src="Assets\Pics\Sappy\Sappy_Logo.png" class="curvedImg img-fluid" alt="Sappy Logo">
+                                        <img src="Assets/Pics/Sappy/Sappy_Logo.png" class="curvedImg img-fluid" alt="Sappy Logo">
                                     </div>
                                 </div>
                                 <!-- text -->
